<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Scrollable content -->

    <!-- Fixed bottom button -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headingTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/heading"
                android:gravity="center"
                android:text="@string/heading"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/roundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/rules_heading"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!-- Score Table -->
            <TableLayout
                android:id="@+id/scoreTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">

                <!-- Repeatable TableRows -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_1"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_1_text"
                        android:textColor="@color/black" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_2"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_2_text"
                        android:textColor="@color/black" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_3"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_3_text"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_4"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_4_text"
                        android:textColor="@color/black" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_5"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_5_text"
                        android:textColor="@color/black" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_6"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_6_text"
                        android:textColor="@color/black" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rule_7"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:ellipsize="end"
                        android:maxLines="10"
                        android:text="@string/rule_7_text"
                        android:textColor="@color/black" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_button"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>
