<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/bottomLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/heading"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/roundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/round_number"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/diceRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/die1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/die_1"
                android:src="@drawable/die_1" />

            <ImageView
                android:id="@+id/die2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/die_2"
                android:src="@drawable/die_2" />

            <ImageView
                android:id="@+id/die3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/die_3"
                android:src="@drawable/die_3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/diceRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/die4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/die_4"
                android:src="@drawable/die_4" />

            <ImageView
                android:id="@+id/die5"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/die_5"
                android:src="@drawable/die_5" />

            <ImageView
                android:id="@+id/die6"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/die_6"
                android:src="@drawable/die_6" />

        </LinearLayout>

        <TextView
            android:id="@+id/rollsLeftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/rolls_left"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/instructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/instruction_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/roll_button"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/categorySection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"> <!-- Initially hidden -->

            <TextView
                android:id="@+id/choseScoreCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:text="@string/chose_score_category"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/categoryToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="center"
                app:alignItems="center"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:elevation="4dp">



        <Button
            android:id="@+id/nextRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/next_round" />
    </LinearLayout>

</RelativeLayout>